--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ h1, h2, h3, h4, h5, h6{
 }
 body{
    font-family: "Poppins", sans-serif;
+   background: #000;
  
   font-style: normal;
 }/* HTML: <div class="loader"></div> */
